...
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gallery" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pocketpaint_dialog_import_stickers"
                tools:ignore="UseCompoundDrawables"
                android:background="?attr/selectableItemBackground"
                style="@style/PocketPaintToolSelectionButton">

                <ImageView
                    android:layout_width="50dp"
...
