<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pocketpaint_outline_view_text_view"
            style="@style/PocketPaintToolSubtitle"
            android:text="@string/dialog_brush_width_text" />

        <View
            android:id="@+id/pocketpaint_outline_view_border"
            style="@style/PocketPaintToolSectionDivider" />

        <LinearLayout
            style="@style/PocketPaintToolSection"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/pocketpaint_shape_stroke_width_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />

            <Space style="@style/PocketPaintToolHorizontalSpace" />

            <EditText
                android:id="@+id/pocketpaint_shape_outline_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <TextView
            android:id="@+id/pocketpaint_shape_tool_fill_outline"
            style="@style/PocketPaintToolSubtitle"
            android:text="@string/shape_tool_dialog_fill_title" />

        <View style="@style/PocketPaintToolSectionDivider" />

        <LinearLayout
            style="@style/PocketPaintToolSection"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/pocketpaint_shape_ibtn_fill"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shape_tool_dialog_rect_title"
                android:src="@drawable/ic_pocketpaint_rectangle" />

            <ImageButton
                android:id="@+id/pocketpaint_shape_ibtn_outline"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shape_tool_dialog_outline_title"
                android:src="@drawable/ic_pocketpaint_rectangle_out" />
        </LinearLayout>

        <TextView
            android:id="@+id/pocketpaint_shape_tool_dialog_title"
            style="@style/PocketPaintToolSubtitle"
            android:text="@string/shape_tool_dialog_rect_title" />

        <View style="@style/PocketPaintToolSectionDivider" />

        <LinearLayout
            android:id="@+id/pocketpaint_shapes_container"
            style="@style/PocketPaintToolSection">

            <ImageButton
                android:id="@+id/pocketpaint_shapes_square_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_rect_title"
                android:src="@drawable/ic_pocketpaint_rectangle" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_circle_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_ellipse_title"
                android:src="@drawable/ic_pocketpaint_circle" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_heart_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_heart_title"
                android:src="@drawable/ic_pocketpaint_heart" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_star_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_star_title"
                android:src="@drawable/ic_pocketpaint_star" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_triangle_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_triangle_title"
                android:src="@drawable/ic_pocketpaint_triangle" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_pentagon_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_pentagon_title"
                android:src="@drawable/ic_pocketpaint_pentagon" />

            <ImageButton
                android:id="@+id/pocketpaint_shapes_hexagon_btn"
                style="@style/PocketPaintSelectableButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/shape_tool_dialog_star_title"
                android:src="@drawable/ic_pocketpaint_hexagon" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
